--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,24 +1,70 @@
-
-/* -------- LES POSTS ----------  */
-
-/* Alignement & Marge  */
-.post{
-  margin: 1% 0%;
+body{
+	background-color: #EFEFEF;
 }
 
-
-
-/* LES IMAGES  */
-
-/* Photo de profil */
-img.picture-profil{
-  width: 100%;
+.side{
+  position: absolute;
+  height: 100%;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  padding-top: 20px;
 }
 
+.logo{
+  padding-bottom: 25px;
+}
 
-/*  LES TEXTES  */
+.icon{
+	background-color: white;
+	border-radius: 10px;
+	font-size: 10px;
+	text-align: center;
+	margin-right: 10px;
+	border-radius: 50%;
+	display: inline-block;
+	padding: 10px;
+	width: 40px;
+	height: 40px;
+}
 
-/*  Les sous-titres */
-p.sub-title{
-  color: grey;
+li{
+	padding-bottom: 10px;
+}
+
+a:hover {
+	text-decoration: none;
+}
+
+.main{
+  margin-left: 17%;
+  font-size: 0.6rem;
+  padding: 0px 10px;
+}
+
+.ensemble{
+	padding: 1.4rem;
+}
+
+.article{
+	background-color: #F5F5F5;
+	margin: 0 auto;
+	height: 7rem;
+	padding: 1rem;
+	margin-bottom: 1rem;
+}
+
+.imgArticle{
+	float: right;
+	width: 5rem;
+	height: 5rem;
+}
+
+.content{
+	color: #798081;
+}
+
+.ngrams{
+	color: #696969;
 }
