--- a/public/css/petite_resolution.css
+++ b/public/css/petite_resolution.css
@@ -57,9 +57,25 @@
         height: 20px;
     }
 
-    #input_search{
+   #input_search{
+        border: 0px;
+        background: #F5F5F5;
+        height: 80%;
+    }
+
+    #div_input_search{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
         position: fixed;
         left: 0px;
-        bottom: 50px;
+        bottom: 8%;
+        margin-bottom: 15px;
+        margin-left: 30px;
+        width: 60%;
+        height: 5%;
+        background: #F5F5F5;
+        border-radius: 100px;
     }
+    
 }
