--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,15 @@ body{
 	background-color: #EFEFEF;
 }
 
+p{
+	margin-top: unset;
+    margin-bottom: unset;
+}
+
+#search, #div_input_search{
+	display: none;
+}
+
 .side{
   position: absolute;
   height: 100%;
@@ -50,7 +59,7 @@ a:hover {
 .article{
 	background-color: #F5F5F5;
 	margin: 0 auto;
-	height: 7rem;
+	min-height: 7rem;
 	padding: 1rem;
 	margin-bottom: 1rem;
 }
@@ -67,4 +76,22 @@ a:hover {
 
 .ngrams{
 	color: #696969;
+}
+
+#input_search_web{
+	border: 0px;
+	background: #F5F5F5;
+	height: 80%;
+	width: 70%;
+    border-radius: 20px;
+}
+
+#div_input_search_web{
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	width: 100%;
+	height: 5%;
+	background: #F5F5F5;
+	border-radius: 100px;
 }
