--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,16 @@
 body{
 	background-color: #EFEFEF;
+	font-family: 'Raleway', sans-serif;
 }
 
 p{
 	margin-top: unset;
     margin-bottom: unset;
+}
+
+.navbar{
+	padding: 0;
+	padding-top: 10px;
 }
 
 #search, #div_input_search{
@@ -17,8 +23,12 @@ p{
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
   padding-top: 20px;
+  background-image: linear-gradient(90deg, #021B79, #0575E6);
+}
+
+.side a {
+	color: white;
 }
 
 .logo{
@@ -76,6 +86,11 @@ a:hover {
 
 .ngrams{
 	color: #696969;
+}
+
+#img_search{
+	width: 1.2rem;
+	height: 1.2rem;
 }
 
 #input_search_web{
