--- a/public/css/petite_resolution.css
+++ b/public/css/petite_resolution.css
@@ -20,7 +20,7 @@
         align-items: center;
     }
 
-    #article, #div_input_search_web{
+    #div_input_search_web{
         display: none;
     }
 
@@ -46,6 +46,8 @@
 
     .side{
         background: #EFEFEF;
+        width: 0px;
+        padding: 0px;
     }
 
     .icon{
@@ -93,6 +95,19 @@
         height: 5%;
         background: #F5F5F5;
         border-radius: 100px;
+    }
+
+    .main{
+        margin-left: 0%;
+    }
+
+    .ensemble{
+        margin-left: 12%;
+        padding: 3rem;
+    }
+
+    .article{
+        width: 100%;
     }
     
 }
