--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,7 +82,7 @@ a:hover {
 }
 
 .main{
-  margin-left: 17%;
+  margin-left: 16.5%;
   font-size: 0.6rem;
   padding: 0px 10px;
 }
@@ -134,5 +134,10 @@ a:hover {
 	height: 5%;
 	background: #F5F5F5;
 	border-radius: 100px;
+}
+
+.bubble{
+	margin: auto;
+	margin-top: 30px;
 }
 
